fix: fix spacing issues

--- a/scripts/src/form/form.scss
+++ b/scripts/src/form/form.scss
@@ -95,6 +95,7 @@
     .field-array-of-object > .array-item-list > .row {
         .form-group {
             margin-bottom: 0px;
+            padding: 0;
         }
         .ccmt-cff-array-row-number {
             position: absolute;
